First working build

--- a/default/BUILD
+++ b/default/BUILD
@@ -1,11 +1,4 @@
-a = 4 // 8
-
-filegroup(
-    name = "my_target",
-    srcs = ["hi.txt"],
-)
-
 cc_binary(
-    name = "my_bin",
-    srcs = ["hi.cpp"],
+    name = "hello_world",
+    srcs = ["main.cpp"],
 )
